--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,23 @@
 {
+  "peacock.color": "#009fad",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#00cee0",
-    "activityBar.background": "#00cee0",
+    "activityBar.activeBackground": "#adc0f2",
+    "activityBar.background": "#adc0f2",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#df00cd",
+    "activityBarBadge.background": "#e03e6b",
     "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#00cee0",
-    "statusBar.background": "#009fad",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#00cee0",
-    "statusBarItem.remoteBackground": "#009fad",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#009fad",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#009fad99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#adc0f2",
+    "statusBar.background": "#819eeb",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#557ce4",
+    "statusBarItem.remoteBackground": "#819eeb",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#819eeb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#819eeb99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#009fad"
+  "peacock.remoteColor": "#819eeb"
 }
